# RankingApp

./: CMakeLists.txt  ConvenienceFuncs.cpp  ConvenienceFuncs.h  Match.cpp  Match.h  MatchMngr.cpp  MatchMngr.h  Player.cpp  Player.h  PlayerMngr.cpp  PlayerMngr.h  RankingClass.cpp  RankingClass.h  RankingClassMngr.cpp  RankingClassMngr.h  RankingDataDefs.h  RankingDb.cpp  RankingDb.h  RankingErrCodes.h  RankingSystem.cpp  RankingSystem.h  Score.cpp  Score.h  ScoreMngr.cpp  ScoreMngr.h  ScoreQueue.cpp  ScoreQueue.h  ValidityPeriod.cpp  ValidityPeriod.h  main.cpp
app/: AllPlayersWidget.cpp  AllPlayersWidget.h  LazyContentLoader.cpp  LazyContentLoader.h  RankingApp.cpp  RankingApp.h  urls.h
gsl/: updateGSL.sh
importer/: importer.cpp
tests/: BasicTestClass.cpp  BasicTestClass.h  tstConvenienceFuncs.cpp  tstMatchMngr.cpp  tstPlayerMngr.cpp  tstRankingSys.cpp  tstScoreQueue.cpp  tstValidityPeriod.cpp
